[package]
name = "web-socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
libp2p = { version = "0.40.0", features = ["tcp-tokio"] }
futures = "0.3.18"
tokio = { version = "1.14.0", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4"
